# learning-kafka

./: README.md  README.rst  docker-compose-debezium.yml  docker-compose.yml  kowl-config-debezium.yaml  kowl-config.yaml  pyproject.toml
learning_kafka/: test.py
tests/: test_learning_kafka.py
